--- a/_site.yml
+++ b/_site.yml
@@ -15,4 +15,5 @@ navbar:
     - icon: fab fa-github
       href: https://github.com/jlgrons/EHR-Phenotyping-Workshop
 output: distill::distill_article
+output_dir: "."  
 ---
